    of possible firmware versions. (LP: #1398458)
  * debian/systemd.postinst: Don't always restart journald, as this currently
    can't be done without losing the current journal and breaking attached
    processes. So only restart it from upgrades < 215-3 (where the socket
    location got moved) as an one-time upgrade path from wheezy.
    (Closes: #771122)

 -- Martin Pitt <mpitt@debian.org>  Tue, 02 Dec 2014 18:47:43 +0100

systemd (217-3) experimental; urgency=medium

  [ Martin Pitt ]
  * systemd.bug-script: Really capture stderr of systemd-delta.
    (Closes: #771498)
  * boot-and-services autopkgtest: Give test apparmor job some time to
    actually finish.

  [ Didier Roche ]
  * updated debian/patches/insserv.conf-generator.patch:
    - if /etc/X11/default-display-manager doesn't match a systemd unit
      (or doesn't exist), be less agressive about what to mask: we let
      all sysvinit-only display-manager units enabled to fallback to previous
      behavior and let them starting. (Closes: #771739)

 -- Martin Pitt <mpitt@debian.org>  Tue, 02 Dec 2014 16:53:36 +0100

systemd (217-2) experimental; urgency=medium

  * Re-enable journal forwarding to syslog, until Debian's sysloggers
    can/do all read from the journal directly.
  * Fix hostnamectl exit code on success.
  * Fix "diff failed with error code 1" spew with systemd-delta.
    (Closes: #771397)
  * Re-enable systemd-resolved. This wasn't meant to break the entire
    networkd, just disable the new NSS module. Remove that one manually
    instead. (Closes: #771423, LP: #1397361)
  * Import v217-stable patches (up to commit bfb4c47 from 2014-11-07).
  * Disable AppArmor again. This first requires moving libapparmor to /lib
    (see #771667). (Closes: #771652)
  * systemd.bug-script: Capture stderr of systemd-{delta,analyze}.
    (Closes: #771498)

 -- Martin Pitt <mpitt@debian.org>  Mon, 01 Dec 2014 15:09:09 +0100

systemd (217-1) experimental; urgency=medium

  [ Martin Pitt ]